--- a/app/src/main/res/layout/activity_people_editor2.xml
+++ b/app/src/main/res/layout/activity_people_editor2.xml
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="New People"
+                android:text="@string/activity_editor_title"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
