--- a/app/src/main/res/layout/item_list_people_gender.xml
+++ b/app/src/main/res/layout/item_list_people_gender.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:hint="Gender"
+        android:hint="@string/activity_editor_gender"
         app:boxStrokeColor="@color/zxing_viewfinder_laser"
         app:hintTextColor="@color/zxing_viewfinder_laser"
         app:layout_constraintEnd_toEndOf="parent"
