--- a/app/src/main/res/layout/activity_device_ipclist.xml
+++ b/app/src/main/res/layout/activity_device_ipclist.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Connected Devices"
+                android:text="@string/activity_lan_devices_title"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
