--- a/app/src/main/res/layout/activity_device_streaming.xml
+++ b/app/src/main/res/layout/activity_device_streaming.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Device"
+                android:text="@string/title_device"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
@@ -44,7 +44,7 @@
                 android:layout_marginBottom="120dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:text="Thermal"
+                android:text="@string/activity_streaming_thermal"
                 android:background="@android:color/white">
 
             </androidx.appcompat.widget.SwitchCompat>
