--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Device"
+                android:text="@string/title_device"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
