--- a/app/src/main/res/layout/fragment_device_setting.xml
+++ b/app/src/main/res/layout/fragment_device_setting.xml
@@ -98,7 +98,7 @@
                     android:layout_marginStart="32dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:text="Face Recognition"
+                    android:text="@string/activity_device_settings_item1"
                     android:background="@android:color/white">
                 </androidx.appcompat.widget.SwitchCompat>
 
@@ -110,7 +110,7 @@
                     android:layout_marginStart="32dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:text="Flip Image"
+                    android:text="@string/activity_device_settings_item2"
                     android:background="@android:color/white">
                 </androidx.appcompat.widget.SwitchCompat>
 
@@ -122,7 +122,7 @@
                     android:layout_marginStart="32dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:text="Only ROI"
+                    android:text="@string/activity_device_settings_item3"
                     android:background="@android:color/white">
 
                 </androidx.appcompat.widget.SwitchCompat>
