--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -74,7 +74,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="More">
+                        android:text="@string/fragment_device_more">
                     </TextView>
 <!--                    <ImageButton-->
 <!--                        android:id="@+id/btn_menu"-->
