--- a/app/src/main/res/layout/item_list_people2.xml
+++ b/app/src/main/res/layout/item_list_people2.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="Name: " />
+                android:text="@string/activity_people_list_name" />
 
             <TextView
                 android:id="@+id/textView_peopleName"
@@ -78,7 +78,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="Age:" />
+                android:text="@string/activity_people_list_age" />
 
             <TextView
                 android:id="@+id/textView_age"
@@ -101,7 +101,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="Gender:" />
+                android:text="@string/activity_people_list_gender" />
 
             <TextView
                 android:id="@+id/textView_gender"
