1. 移除切換Wi-Fi的功能 2. search hotspot功能更改為connect hotspot，即連接當前所連的網路熱點 3. scan QR code功能不會自動做網路切換

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="add_device">
         <item>Scan QR Code</item>
-        <item>Search Hotspot</item>
+        <item>Connect Hotspot</item>
         <item>Search LAN</item>
     </string-array>
 
