1. 支援檢視不同裝置的profile以及notification 2. 新增profile時可選擇裝置

--- a/app/src/main/res/menu/people_option_menu.xml
+++ b/app/src/main/res/menu/people_option_menu.xml
@@ -6,7 +6,7 @@
         android:title="Search"
         android:icon="@drawable/ic_toolbar_search_gray"
         app:showAsAction="always|collapseActionView"
-        app:actionViewClass="com.ulsee.thermalapp.ui.people.PeopleSearchView" />
+        app:actionViewClass="com.ulsee.thermalapp.ui.people.ProfileSearchView" />
 
 <!--    <item-->
 <!--        android:id="@+id/people_delete"-->
