1. modification of activity title 2. modification of activity menu

--- a/app/src/main/res/layout/activity_multi_device.xml
+++ b/app/src/main/res/layout/activity_multi_device.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/title_device"
+                android:text="@string/activity_live_view"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
