--- a/app/src/main/res/menu/device_option_menu.xml
+++ b/app/src/main/res/menu/device_option_menu.xml
@@ -3,7 +3,6 @@
 
     <item
         android:id="@+id/view_all"
-        android:title="View All"
-        app:showAsAction="always" />
+        android:title="@string/activity_live_view" />
 
 </menu>
